--- a/www/index.htm
+++ b/www/index.htm
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Pi Music</title>
-	<link rel="icon" href="favicon.ico" type="image/png" sizes="16x16">
+    <link rel="icon" href="favicon.ico" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   </head>
   <body>
-	
+    <div id="app">
+      <app-nav></app-nav>
+      <app-view>
+        <app-sidebar></app-sidebar>
+        <app-content></app-content>
+      </app-view>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
